Update public index paths to assets for hero + pare

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
   <title>Moko See Moko Do — Proof of Breath</title>
   <meta name="description" content="Moko See Moko Do / Ngā Wai o Rua — a living whare in code and carving. Every cut a law, every chip a Tiki.">
 
-  <link rel="apple-touch-icon" href="../assets/apple-touch-icon.png" sizes="180x180" />
-  <link rel="icon" href="../assets/favicon.png" type="image/png" />
+  <link rel="apple-touch-icon" href="assets/apple-touch-icon.png" sizes="180x180" />
+  <link rel="icon" href="assets/favicon.png" type="image/png" />
 
   <style>
     :root{
@@ -370,7 +370,7 @@
 
   <!-- PARE banner -->
   <div class="pare-banner" aria-label="Pare lintel">
-    <img src="../assets/pare.svg" alt="" onerror="this.style.display='none'">
+    <img src="assets/pare.svg" alt="" onerror="this.style.display='none'">
     <div class="pare-fallback" aria-hidden="true"></div>
   </div>
 
@@ -378,12 +378,12 @@
   <section class="hero" id="home">
     <div class="hero__wrap">
       <div id="blink" role="img" aria-label="Karakia">
-        <img src="../assets/karakia_blink_poster.png" alt="">
+        <img src="assets/karakia_blink_poster.png" alt="">
       </div>
       <video id="hero"
-             src="../assets/MSMD_intro_loop_v1.mp4"
+             src="assets/MSMD_intro_loop_v1.mp4"
              autoplay muted loop playsinline preload="auto"
-             poster="../assets/karakia_blink_poster.png"
+             poster="assets/karakia_blink_poster.png"
              aria-label="MSMD / Ngā Wai o Rua intro loop"></video>
       <div class="vignette" aria-hidden="true"></div>
     </div>
