--- a/public/index.html
+++ b/public/index.html
@@ -310,6 +310,40 @@
       margin:0 0 10px;
     }
 
+    /* Gate 1 — Hei Rata viewer */
+    #gate1-section{
+      padding:clamp(20px,5vw,60px) var(--pad) 0;
+    }
+    #gate1-section-inner{
+      max-width:var(--max);
+      margin:0 auto;
+    }
+    #gate1-section h2{
+      margin:0 0 8px;
+      font-size:clamp(20px,3vw,26px);
+      letter-spacing:.08em;
+      text-transform:uppercase;
+    }
+    #gate1-section p{
+      margin:0 0 16px;
+      font-size:14px;
+      color:#cbd5e1;
+      max-width:70ch;
+    }
+    model-viewer.hei-rata-viewer{
+      width:100%;
+      height:500px;
+      background:#050505;
+      border-radius:24px;
+      outline:none;
+      box-shadow:var(--glow);
+    }
+    @media (max-width:768px){
+      model-viewer.hei-rata-viewer{
+        height:360px;
+      }
+    }
+
     footer{
       border-top:1px solid rgba(255,255,255,.08);
       background:linear-gradient(to top,rgba(255,255,255,.02),rgba(255,255,255,0));
@@ -354,6 +388,9 @@
       .engine-grid{grid-template-columns:1fr;}
     }
   </style>
+
+  <!-- model-viewer library for Gate 1 -->
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 </head>
 <body>
   <header>
@@ -424,6 +461,32 @@
             <p>He toi whakairo, he mana tangata. Mind = stone, Action = chisel, Voice = resonance.</p>
           </article>
         </div>
+      </div>
+    </section>
+
+    <!-- Gate 1 — Hei Rata Digital Taonga -->
+    <section id="gate1-section" aria-labelledby="gate1-heading">
+      <div id="gate1-section-inner">
+        <h2 id="gate1-heading">Gate 1 — Hei Rata Digital Taonga</h2>
+        <p>
+          This hei rata was carved in living rata and then scanned with the Kiri engine.
+          The 3D twin here is a digital taonga — proof that carving law can travel through
+          light and code without losing its mana. Rotate, zoom, and sit with the grain.
+        </p>
+
+        <model-viewer
+          class="hei-rata-viewer"
+          src="assets/hei_rata_gate1_v1.glb"
+          alt="Hei Rata digital taonga"
+          camera-controls
+          auto-rotate
+          auto-rotate-delay="4000"
+          interaction-prompt="auto"
+          shadow-intensity="1"
+          exposure="1"
+          ar
+          ar-modes="webxr scene-viewer quick-look">
+        </model-viewer>
       </div>
     </section>
 
